# llm_to_mcp_integration_engine

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  commit_message.txt  email_response.txt  pyproject.toml  script.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: FAQ.md  Makefile  conf.py  index.rst  installation.rst  llm2tools_protocol.md  make.bat  usage.rst
src/llm_to_mcp_integration_engine/: __init__.py  config.py  cot_verifier.py  exceptions.py  executor.py  finder.py  llm_to_mcp_integration_engine.py  logging.py  registry.py  retry.py  schema.py  utils.py  validators.py
src/llm_to_mcp_integration_engine/core/: executor.py  integrator.py  json_handler.py  non_json_handler.py
tests/: __init__.py  test_custom_integration.py  test_llm_to_mcp_integration_engine.py
