[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_to_mcp_integration_engine"
version = "0.1.0"
description = "The llm to mcp integration engine is a communication layer designed to enhance the reliability of interactions between LLMs and tools (like MCP servers or functions)."
readme = "README.rst"
authors = [
  {name = "Michael Alamin", email = "michaelalamin9@gmail.com"}
]
maintainers = [
  {name = "Michael Alamin", email = "michaelalamin9@gmail.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Million19/llm_to_mcp_integration_engine/issues"
changelog = "https://github.com/Million19/llm_to_mcp_integration_engine/blob/master/changelog.md"
homepage = "https://github.com/Million19/llm_to_mcp_integration_engine"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

